[tool.poetry]
name = "proxy_pool"
version = "0.1.0"
description = ""
authors = ["jasmineamber <jasmineamber@aliyun.com>"]

[[tool.poetry.source]]
name = "aliyun"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
