[tool.poetry]
name = "proxy_pool"
version = "0.1.0"
description = ""
authors = ["jasmineamber <jasmineamber@aliyun.com>"]

[[tool.poetry.source]]
name = "aliyun"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.6"
apscheduler = "3.2.0"
werkzeug = "0.15.3"
flask = "1.0"
requests = "2.20.0"
lxml = "4.6.2"
pyexecjs = "1.5.1"
click = "7.0"
gunicorn = "19.9.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
